<resources>
    <string name="title_stationery_request">Stationery Request</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_strequest">Stationery Request</string>
    <string name="title_stdepartmentedit">Edit Department</string>
    <string name="title_stdeditdelegate">Edit Delegate</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_signout">Signout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">ca2</string>
    <string name="text_current_delegate">Current Delegate : </string>
    <string name="text_from_date">From : </string>
    <string name="text_to_date">To : </string>
    <string name="text_new_delegate_selection">New Delegate : </string>
    <string name="label_from">From : </string>
    <string name="label_to">To : </string>
    <string name="action_cancel">Cancel</string>
    <string name="action_assign">Assign</string>


</resources>
