<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Logic University"
            android:textColor="#F73F7F"
            android:textFontWeight="20"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewcurrent_delegate"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="Current Delegate"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/current_delegate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="..."
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewfrom_delegate"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="From :"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/from_delegate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="..."
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewto_delegate"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="To :"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/to_delegate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="..."
                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <!--<TextView-->
        <!--android:id="@+id/current_delegate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/text_current_delegate"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
        <!--android:textSize="18sp" />-->

        <!--<TextView-->
        <!--android:id="@+id/from_delegate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/text_from_date"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
        <!--android:textSize="18sp" />-->

        <!--<TextView-->
        <!--android:id="@+id/to_delegate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/text_to_date"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
        <!--android:textSize="18sp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView

                android:layout_width="370dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_new_delegate_selection"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/delegate_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:spinnerMode="dropdown">

            </Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_from"
                android:textColor="#000000"
                android:textSize="18sp" />

            <!--<EditText-->
            <!--android:id="@+id/from_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="date" />-->
            <EditText
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="Select From Date" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_to"
                android:textColor="#000000"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="center_vertical"
                android:hint="Select To Date"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E91E63"
                android:text="@string/action_cancel" />

            <Button
                android:id="@+id/btndelegateAssign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:text="@string/action_assign" />
        </LinearLayout>

        <Button
            android:id="@+id/remove_delegate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3DEC4"
            android:padding="5dp"
            android:text="Remove Delegate" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

